* Fix large product card gap

--- a/src/app/(website)/shop/_components/shopProductCardLarge/shopProductCardLarge.module.scss
+++ b/src/app/(website)/shop/_components/shopProductCardLarge/shopProductCardLarge.module.scss
@@ -193,6 +193,7 @@
     height: auto;
     padding-left: 15px;
     padding-right: 15px;
+    gap: 10px;
 
     .carousel {
       :global(.slick-prev) {
